Chrome: Fix the post schedule z-index

--- a/editor/sidebar/post-schedule/style.scss
+++ b/editor/sidebar/post-schedule/style.scss
@@ -31,6 +31,7 @@
 	background: $white;
 	padding: 10px;
 	min-width: 265px;
+	z-index: z-index( '.editor-post-schedule__dialog' );
 }
 
 .editor-post-schedule__dialog-arrow {
